fix last tile not showing on complete

--- a/src/index.css
+++ b/src/index.css
@@ -134,15 +134,14 @@ button {
   color: #888;
 }
 
-@keyframes pulse {
-  0%,
-  100% {
+@keyframes glow {
+  0%{
     transform: scale(1);
-    box-shadow: 0 0 15px rgba(0, 255, 255, 0.5), 0 0 25px rgba(255, 0, 255, 0.3);
+    box-shadow: 0 0 100px 4px #bec37c;
   }
-  50% {
-    transform: scale(1.05);
-    box-shadow: 0 0 25px rgba(0, 255, 255, 0.7), 0 0 35px rgba(255, 0, 255, 0.5);
+  100% {
+    transform: scale(0.98);
+    box-shadow: 0 0 100px 4px rgb(100, 102, 65);
   }
 }
 
